delete txt file

--- a/PythonDataAnalysis/DataAnalystPy.ipynb
+++ b/PythonDataAnalysis/DataAnalystPy.ipynb
@@ -1,16 +1,49 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "# Python for Data Analyst (Book)\n",
+    "This Notebook will serve as the introductioin to the most important fundamenatal concepts in data analysis using Python more particularly in the libaries such as **NumPy, Pandas**.\n",
+    "\n",
+    "This Notebook will serve as a reference to my reading/learning from the book **\"Python for Data Analysis, 3rd Edition\" by Wes McKinney**."
+   ],
+   "id": "414d33ae67833c9c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Introduction\n",
+    "This introduction will cover the essential core Python concepts that form the foundation for data analysis.\n",
+    "Before diving into Python’s powerful libraries — like NumPy and Pandas — it’s important to first understand these basics, as they will make working with more advanced tools far easier and more intuitive."
+   ],
+   "id": "481f7790d343cdd7"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-09T20:44:31.346396Z",
+     "start_time": "2025-08-09T20:44:31.345047Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "\n"
+   ],
+   "id": "7bd30f02e7f7bed9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "\n",
+   "id": "6669df52b3200305"
   }
  ],
  "metadata": {
