--- a/PythonDataAnalysis/DataAnalystPy.ipynb
+++ b/PythonDataAnalysis/DataAnalystPy.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "code",
    "source": [
     "\n",
-    "\n"
+    "import pandas as pd\n"
    ],
    "id": "7bd30f02e7f7bed9",
    "outputs": [],
