--- a/PythonDataAnalysis/PythonForDataAnalysis.ipynb
+++ b/PythonDataAnalysis/PythonForDataAnalysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpYYQzaQ9fvi/40KsYbyNc",
+      "authorship_tag": "ABX9TyPaG/Gjhm0ZB/ydnFZOyVv9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,8 @@
       "cell_type": "markdown",
       "source": [
         "## Python Fundamentals\n",
-        "This will be a quick brief overview of some Python concepts that are important."
+        "This section provides a brief overview of key Python concepts.\n",
+        "Each code example is modular—meaning you can run it independently without needing to execute any other code blocks."
       ],
       "metadata": {
         "id": "FBfhDZTkob3r"
@@ -63,64 +64,239 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Useful Methods\n",
-        "The first method is going to be a clean string function."
+        "### Useful Methods"
       ],
       "metadata": {
         "id": "oQc0sHp9rWTl"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Clean String Method\n",
+        "The first method is going to be a clean string function.\n",
+        "The second method is a more functional and cleaner. BELOW"
+      ],
+      "metadata": {
+        "id": "da6s6Fc90Woo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import re\n",
+        "import re  # For pattern-based text replacements\n",
         "\n",
-        "# Here is an example of a user survey with users putting in data that is not readable so this method will clean the string(data) and make it more useful for analysis\n",
-        "names = ['angel. !','Bob.   ',' job hand']\n",
+        "# Remove specific punctuation: !, #, ?\n",
+        "def remove_punctuation(value):\n",
+        "    return re.sub(\"[!#?]\", \"\", value)\n",
         "\n",
-        "def clean_string(strings):\n",
-        "  result = []\n",
-        "  for name in strings:\n",
-        "    name = name.strip()\n",
-        "    # Inside in the [] are the letters/symbols(EVEN SPACES) we want to 'sub' for blank space into 'name'\n",
-        "    name = re.sub(\"[.!#? ]\", \"\", name)\n",
-        "    # title capitalizes the begining of each word\n",
-        "    name = name.title()\n",
-        "    result.append(name)\n",
+        "# Cleaning steps: strip spaces → remove punctuation → title case\n",
+        "clean_ops = [str.strip, remove_punctuation, str.title]\n",
         "\n",
-        "  return result\n",
+        "# Apply all cleaning steps to each string in the list\n",
+        "def clean_strings(strings, ops):\n",
+        "    result = []\n",
+        "    for value in strings:\n",
+        "        for func in ops:\n",
+        "            value = func(value)\n",
+        "        result.append(value)\n",
+        "    return result\n",
         "\n",
-        "clean_string(names)\n"
+        "# Example data\n",
+        "states = [\n",
+        "    '   Alabama ',\n",
+        "    'Georgia!',\n",
+        "    'Georgia',\n",
+        "    'georgia',\n",
+        "    'FlOrIda',\n",
+        "    'south   carolina##',\n",
+        "    'West virginia?'\n",
+        "]\n",
+        "\n",
+        "# Clean and print\n",
+        "print(clean_strings(states, clean_ops))\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "CtCwvurwrbId",
-        "outputId": "fe5ca351-416d-4d85-e14a-2742358f7beb"
+        "id": "R77DbO8f0-UK",
+        "outputId": "7d87cae3-190e-463f-dce0-c5623ca498e7"
       },
-      "execution_count": 32,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Angel', 'Bob', 'Jobhand']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Alabama \n",
+            "Georgia\n",
+            "Georgia\n",
+            "georgia\n",
+            "FlOrIda\n",
+            "south   carolina\n",
+            "West virginia\n"
+          ]
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### Anonymous (Lambda) Functions\n",
+        "\n",
+        "Python has support for so-called anonymous or lambda functions, which are a way of writing functions consisting of a single statement, the result of which is the return value.\n",
+        "\n",
+        "They are defined with the lambda keyword. which has no meaning other than \"we are declaring a lambda\"\n"
+      ],
       "metadata": {
-        "id": "3Rh5ayZUs5wa"
+        "id": "hvtkODjg2Jdk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# defining a lambda function\n",
+        "def short_function(x):\n",
+        "  return x * 2\n",
+        "\n",
+        "# This is equivlent\n",
+        "equiv_anon = lambda x: x * 2"
+      ],
+      "metadata": {
+        "id": "pOyebHou4MNs"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### More Examples:\n",
+        "Suppose you want to sort a collection of strings by the distinct letters in each string."
+      ],
+      "metadata": {
+        "id": "sne5dlVc5H4c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strings = ['foo', 'card', 'bar', \"aaaa\", 'abab']\n",
+        "\n",
+        "# Sort by the count of unique characters in each string\n",
+        "# set(x) → unique characters from the string\n",
+        "# len(set(x)) → number of unique characters\n",
+        "strings.sort(key=lambda x: len(set(x)))\n",
+        "\n",
+        "print(strings)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NbcR8EmZ5V61",
+        "outputId": "2c09c04f-7238-47e5-b699-826892f5cf6b"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['aaaa', 'foo', 'abab', 'bar', 'card']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Generators\n",
+        "many objects in python support iteration, such as over objects in a list or lines in a file. This is accomplished by means of the iterator protocol, a generic way to make objects iterable.\n",
+        "\n",
+        "**NOTE: Since generator produce output one element at a time versus an entire list all at once, it can help your program use less memory**"
+      ],
+      "metadata": {
+        "id": "Tr1WQ6AM6c6O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define a generator function that yields squares of numbers\n",
+        "def squares(n=10):\n",
+        "    # This message is printed when the generator is first created\n",
+        "    print(f'Generating squares from 1 to {n ** 2}')\n",
+        "    # Yield squares of numbers from 1 to n\n",
+        "    for i in range(1, n + 1):\n",
+        "      # yield is a new keyword\n",
+        "        yield i ** 2\n",
+        "\n",
+        "# Printing the generator object itself (this will not run the generator yet)\n",
+        "print(squares())\n",
+        "\n",
+        "# The generator only runs when you iterate over it\n",
+        "# Here, we loop through the generator and print each square\n",
+        "for x in squares():\n",
+        "    print(x, end=' ')\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s7QqBkRj7PyU",
+        "outputId": "616cef9c-23a1-4ae9-e89d-cb2955455656"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<generator object squares at 0x7c9d603c7140>\n",
+            "Generating squares from 1 to 100\n",
+            "1 4 9 16 25 36 49 64 81 100 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Generator Expressions\n",
+        "Generator Expression is another way to create generators. Similar to list comprehenion but indead of square brackets [ ] we use parenthesis().\n"
+      ],
+      "metadata": {
+        "id": "wiRwNWex85QS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gen = (x ** 2 for x in range(100))\n",
+        "print(gen)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H-8MtfxS9hb2",
+        "outputId": "2f10abbc-5a61-429f-8715-055c53fd277e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<generator object <genexpr> at 0x7c9d604039f0>\n"
+          ]
+        }
+      ]
     }
   ]
 }
