added how to create ndarray and notes

--- a/PythonDataAnalysis/NumPyBasic(Ch4).ipynb
+++ b/PythonDataAnalysis/NumPyBasic(Ch4).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7BPC/di89tAEzNdOcJirD",
+      "authorship_tag": "ABX9TyMg1DApzfH8qbyNrPEA/EDu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,9 @@
       "cell_type": "markdown",
       "source": [
         "## Introduction to Numpy\n",
-        "One of the reasons NumPy is so important for numerical computations in python is because it is designed for efficiency on large arrays of data."
+        "One of the reasons NumPy is so important for numerical computations in python is because it is designed for efficiency on large arrays of data.\n",
+        "\n",
+        "It provides efficient multi-dimensional array objects and various mathematical functions."
       ],
       "metadata": {
         "id": "daI7aE7iD-zQ"
@@ -79,12 +81,201 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##The NumPy ndarray: A Multidimensional Array Object\n",
-        "One of the key features of NumPy is its N-dimensional array object, or ndarray, which is a fast, flexible container for large datasets in Python.      "
+        "## Creating an array (ndarray)\n",
+        "**ndarray = N-dimentional arrays**\n",
+        "\n",
+        "The easiest way to create an array is to use the **array function**. This accepts any sequence-like object(including other arrays) and produces a NumPy array containing the passed data.\n",
+        "\n",
+        "**Note:** although **ndarrays** supports only `homogeneous` data types (elements within it are of the same data type).\n",
+        "- You can also use **ndarrays** with different data type, using dtype = 'object'"
+      ],
+      "metadata": {
+        "id": "xC0h66wwW-SV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "# Here I will create a few different dimentional arrays\n",
+        "\n",
+        "# creating a 1D array\n",
+        "arr_1d = np.array([1,2,3])\n",
+        "\n",
+        "# creating a 2D array\n",
+        "arr_2d = np.array([[1,2,3],[3,4,6]])\n",
+        "\n",
+        "# creating a 3D array\n",
+        "# A 3D array is like having 2D array stacked\n",
+        "arr_3d = np.array([[[1, 2,0],\n",
+        "                    [3, 4,6]],\n",
+        "\n",
+        "                    [[5, 6,9],\n",
+        "                     [7, 8,10]]])\n",
+        "\n",
+        "print(f\"1D array:\\n{arr_1d}\\n\")\n",
+        "print(f\"2D array:\\n{arr_2d}\\n\")\n",
+        "print(f\"3D array:\\n{arr_3d}\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LVq-X29uYTkv",
+        "outputId": "fac94591-3bcb-4a1b-c80c-f0293a6937c7"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1D array:\n",
+            "[1 2 3]\n",
+            "\n",
+            "2D array:\n",
+            "[[1 2 3]\n",
+            " [3 4 6]]\n",
+            "\n",
+            "3D array:\n",
+            "[[[ 1  2  0]\n",
+            "  [ 3  4  6]]\n",
+            "\n",
+            " [[ 5  6  9]\n",
+            "  [ 7  8 10]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Index Slicing\n",
+        "Here we will discuss Index Slicing with arrays."
+      ],
+      "metadata": {
+        "id": "wfvLa_o3ft46"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Array attributes\n",
+        "Here I will be learning the basic of NumPy Array attributes before getting into ndarrays in NumPy.\n",
+        "- ndim\n",
+        "- shape\n",
+        "- size\n",
+        "- dtype"
+      ],
+      "metadata": {
+        "id": "MFvf6dNDU3KS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ndim\n",
+        "The ndim attribute returns the number of array dimensions of an array."
+      ],
+      "metadata": {
+        "id": "UVYjRd-_UDmU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Here we will create a 3 dimensional array and return it to validate it is a 3 dimensional array.\n",
+        "arr = ([[1,2,3],[4,5,6],[7,8,9]])\n",
+        "print(arr)\n",
+        "print(np.ndim(arr))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ku64EvjeTwR3",
+        "outputId": "ecb6b2b1-73ab-4c7c-e09a-c25528b40c93"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##4.1: The NumPy ndarray: A Multidimensional Array Object\n",
+        "One of the key features of NumPy is its N-dimensional array object, or ndarray, which is a fast, flexible container for large datasets in Python.     "
       ],
       "metadata": {
         "id": "roPB2IQmE3h5"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "YhdXUkFLOZ7N"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = np.array([[\"angel\", \"bob\"], [\"ariana\", \"briana\"]])\n",
+        "print(names.shape)   # (2, 2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E_JQMrLkOfBr",
+        "outputId": "37b980fe-427b-4824-c144-adbf0d5d8aa3"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v6Nmc7h1OzkI",
+        "outputId": "cf94c601-4f81-4ccf-c38e-ca3c78e6c5e3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "bob\n"
+          ]
+        }
+      ]
     }
   ]
 }
